--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "IRON-M4N",
   "license": "MIT",
   "dependencies": {
-    "baileys": "*",
+    "baileys": "git+https://github.com/WhiskeySockets/Baileys.git",
     "async-mutex": "^0.5.0",
     "express": "^4.21.1",
     "megajs": "*",
